--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="es">
     <head>
         <title> BBRecipes </title>
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@100;200;300;400;500&family=Fredericka+the+Great&family=Great+Vibes&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="./css/styles.css" media="screen" />
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
-    <body>
+    <body class="fondo">
         <header id="home">
-            <img class="img_size" src="./content/logo.jpeg" alt="BBRecipes Logo"/>
+            <!-- <img class="img_size" src="./content/logo.jpeg" alt="BBRecipes Logo"/> -->
             <div style="float:left; margin-left:15px">
                 <h1>BBRecipes</h1>
-                <h2>yo cocino lo que me da la gana</h2>
-                <h2>¿Que buscas cocinar hoy?</h2>
+                <h2>Yo cocino lo que me da la gana</h2>
+                <h3>¿Que buscas cocinar hoy?</h3>
             </div>
         </header>
         <div class="container">
