--- a/index.html
+++ b/index.html
@@ -8,53 +8,77 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     </head>
-    <body class="fondo">
-        <header id="home">
-            <!-- <img class="img_size" src="./content/logo.jpeg" alt="BBRecipes Logo"/> -->
-            <div style="float:left; margin-left:15px">
-                <h1>BBRecipes</h1>
-                <h2>Yo cocino lo que me da la gana</h2>
-                <h3>¿Que buscas cocinar hoy?</h3>
-            </div>
-        </header>
-        <div class="container">
-            <div class="row">
-                <div class="col-sm boton-menu">
-                    <a href="#home"><i class="fas fa-home">Inicio</i></a>
+    <body>
+        <div id="home" class="home fondo fondo_img">
+            <div class="back-trans-content">
+                <div class="title-text">
+                    <h1>BBRecipes</h1>
+                    <h2>Yo cocino lo que me da la gana</h2>
+                    <h3>¿Que buscas cocinar hoy?</h3>
                 </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/desayunos.html"><i class="fas fa-boton-menubread-slice">Desayunos</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/licuados.html"><i class="fas fa-blender">Licuados</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/ensaladas.html"><i class="fas fa-utensils">Ensaladas</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/sopas.html"><i class="fas fa-utensil-spoon">Sopas</i></a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/mariscos.html"><i class="fas fa-fish">Mariscos</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/cenas.html"><i class="fas fa-hotdog">Cenas</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/cenas_navidenas.html"><i class="fas fa-candy-cane">Cenas Navideñas</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/postres.html"><i class="fas fa-cookie-bite">Postres</i></a>
-                </div>
-                <div class="col-sm boton-menu">
-                    <a href="./content/modulos/cocteles.html"><i class="fas fa-cocktail">Cocteles</i></a>
+                <div class="botones_container">
+                    <div class="container">
+                        <div class="row">
+                          <div class="col boton-menu">
+                            <a href="#home"><i class="fas fa-home"></i>Inicio</a>
+                          </div>
+                          <div class="col boton-menu">
+                            <a href="./content/modulos/desayunos.html"><i class="fas fa-bread-slice"></i>Desayunos</a>
+                          </div>
+                          <div class="col boton-menu">
+                            <a href="./content/modulos/licuados.html"><i class="fas fa-blender"></i>Licuados</a>
+                          </div>
+                        </div>
+                        <div class="row">
+                            <div class="col boton-menu">
+                                <a href="./content/modulos/ensaladas.html"><i class="fas fa-utensils"></i>Ensaladas</a>
+                              </div>
+                              <div class="col boton-menu">
+                                <a href="./content/modulos/sopas.html"><i class="fas fa-utensil-spoon"></i>Sopas</a>
+                              </div>
+                        </div>
+                        <div class="row">
+                          <div class="col boton-menu">
+                            <a href="./content/modulos/mariscos.html"><i class="fas fa-fish"></i>Mariscos</a>
+                          </div>
+                          <div class="col boton-menu">
+                            <a href="./content/modulos/postres.html"><i class="fas fa-cookie-bite"></i>Postres</a>
+                          </div>
+                          <div class="col boton-menu">
+                            <a href="./content/modulos/cocteles.html"><i class="fas fa-cocktail"></i>Cocteles</a>
+                          </div>
+                        </div>
+                        <div class="row">
+                            <div class="col boton-menu">
+                                <a href="./content/modulos/cenas.html"><i class="fas fa-hotdog"></i>Cenas</a>
+                              </div>
+                              <div class="col boton-menu">
+                                <a href="./content/modulos/cenas_navidenas.html"><i class="fas fa-candy-cane"></i>Cenas Navideñas</a>
+                              </div>
+                        </div>
+                      </div>
                 </div>
             </div>
         </div>
-        <footer>
-            &copy; Aquí va un footer
+        <footer class="fondo-footer">
+            <div class="footer-text">
+                <p>Simplemente los mejores</p>
+                <h5>BBRecipes &copy; 2016</h5> 
+            </div>
+            <div class="footer-logos">
+                <div class="logo-f">
+                    <i class="fab fa-facebook"></i>
+                </div>
+                <div class="logo-f">
+                    <i class="fab fa-instagram"></i>
+                </div>
+                <div class="logo-f">
+                    <i class="fab fa-twitter"></i>
+                </div>
+                <div class="logo-f">
+                    <i class="fas fa-phone"></i>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
