--- a/content/modulos/cenas_navidenas.html
+++ b/content/modulos/cenas_navidenas.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/styles-recetas.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="../../css/styles-recetas.css" media="screen" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     <link
@@ -19,7 +19,7 @@
     <header>
         <nav>
             <ul class="breadcrumb fondo-nav">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../../index.html">Inicio</a></li>
                 <li><a href="#cn1">Pavo De Navidad Asado</a></li>
                 <li><a href="#cn2">Pierna De Cerdo Al Horno</a></li>
                 <li><a href="#cn3">Muslos De Pollo Al Horno</a></li>
